1. 细节调整